[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycparser"
version = "2.21"
description = "A C parser and AST generator written in pure Python"
readme = "README.md"
requires-python = ">=3.6"
authors = [{name = "Eli Bendersky", email = "eliben@gmail.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent"
]
dynamic = ["readme", "requires-python", "authors", "classifiers"]
