[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycparser"
version = "2.21"
description = "A C parser and AST generator written in pure Python"
dynamic = ["readme", "requires-python", "authors", "classifiers"]

# You can also define the 'readme' field dynamically as it will be sourced from the 'README.md' file later
